[build-system]
requires = ["setuptools>=61.0", "gymnasium", "pygame", "shapely"]
build-backend = "setuptools.build_meta"

[project]
name = "decision-making"
version = "2.2.0"
authors = [
  { name="Jared J. Beard", email="jbeard6@mix.wvu.edu" },
]
description = "Custom decision making tools for use in IRL"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[tools.setuptools]
include_package_data = true

[tools.setuptools.packages.find]
where = ["decision_making"]

[project.urls]
"Homepage" = "https://github.com/wvu-irl/irl-gym"
"Documentation" = "https://irl-gym.readthedocs.io/en/latest/intro.html"